--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    row-gap: 5px;
+    row-gap: 4px;
     height: 44px;
     width: 44px;
     border-radius: 50%;
@@ -124,17 +124,61 @@ header {
     display: block;
     background: var(--text-color);
     height: 2px;
-    width: 25px;
+    width: 22px;
     transition: 0.3s;
 }
 /* When clicked, the 3 lines will be transformed into an cross. 
 line 1 and line 3 will rotate 45deg, where line 2 will disappear. */
 .move .line1 {
-    transform: rotate(-45deg) translate(-5px, 5px);
+    transform: rotate(-45deg) translate(-4px, 4px);
 }
 .move .line2 {
     opacity: 0;
 }
 .move .line3 {
-    transform: rotate(-45deg) translate(-5px, 5px);
+    transform: rotate(45deg) translate(-4px, -4px);
+}
+
+/* Menu */
+
+.menu {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 14, 0.6);
+    z-index: 106;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s;
+    clip-path: circle(0% at 100% 0%);
+}
+
+.menu.active {
+    clip-path: circle(144% at 100% 0%);
+}
+
+.menu img{
+    width: 700px;
+}
+
+.navbar {
+    display: grid;
+    row-gap: 1rem;
+    text-align: right;
+    padding-right: 2rem;
+}
+
+.navbar a {
+    font-size: 1.6rem;
+    color: var(--text-color);
+    font-weight: 500;
+    transition: 0.2s;
+}
+
+.navbar a:hover {
+    border-bottom: 4px solid var(--main-color);
+    font-size: 1.7rem;
 }
