--- a/css/style.css
+++ b/css/style.css
@@ -182,3 +182,90 @@ line 1 and line 3 will rotate 45deg, where line 2 will disappear. */
     border-bottom: 4px solid var(--main-color);
     font-size: 1.7rem;
 }
+
+/* Notification */
+.notification {
+    position: absolute;
+    top: 110%;
+    right: 5rem;
+    background: var(--light-color);
+    width: 300px;
+    height: 350px;
+    border-radius: 0.5rem;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    transition: 0.5s;
+    clip-path: circle(0% at 100% 0%);
+}
+
+.notification.active {
+    clip-path: circle(144% at 100% 0%);
+}
+
+.notification-box {
+    display: flex;
+    align-items: baseline;
+    column-gap: 1rem;
+    border-radius: 0.5rem;
+    padding: 10px;
+}
+
+.tick {
+    background: #60bd57;
+}
+
+.cross {
+    background: #da3030;
+}
+
+.notification-box .bx {
+    color: #ffefef;
+}
+
+.home {
+    position: relative;
+    min-height: 540px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 5rem;
+}
+
+.home img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 1.4rem;
+    z-index: -1;
+}
+
+.home-text {
+    padding-right: 4rem;
+    text-align: right;
+}
+
+.home-text h1 {
+    font-size: 2.4rem;
+    text-transform: uppercase;
+    color: var(--dark-color);
+    margin-bottom: 1rem;
+}
+
+.btn {
+    background: var(--main-color);
+    padding: 15px 20px;
+    color: var(--text-color);
+    text-transform: uppercase;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    font-weight: 500;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%, 0% 70%);
+}
+
+.btn:hover {
+    background: var(--light-color);
+    transition: 0.3s all linear;
+}
