--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@
     background: var(--main-color);
 }
 
+section {
+    padding: 4rem 0 3rem;
+}
+
 img {
     width: 100%;
 }
@@ -261,11 +265,33 @@ line 1 and line 3 will rotate 45deg, where line 2 will disappear. */
     text-transform: uppercase;
     font-size: 1rem;
     letter-spacing: 1px;
-    font-weight: 500;
+    font-weight: 700;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%, 0% 70%);
 }
 
 .btn:hover {
     background: var(--light-color);
     transition: 0.3s all linear;
+}
+
+/* Heading */
+.heading {
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    margin-bottom: 2rem;
+}
+
+.heading .bx {
+    font-size: 21px;
+    color: var(--text-color);
+    background: var(--main-color);
+    padding: 10px;
+    border-radius: 80%;
+}
+
+.heading h2{
+    font-size: 24px;
+    padding: 5px;
+    font-weight: 500;
 }
