--- a/css/style.css
+++ b/css/style.css
@@ -295,3 +295,76 @@ line 1 and line 3 will rotate 45deg, where line 2 will disappear. */
     padding: 5px;
     font-weight: 500;
 }
+
+.box {
+    position: relative;
+    width: 100%;
+    height: 350px;
+    border-radius: 0.5rem;
+}
+
+.box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0.5rem;
+}
+
+.box .box-text {
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    padding: 10px;
+    background: hsl(227, 20%, 20%, 0.6);
+    backdrop-filter: blur(2px);
+    border-radius: 0.25rem;
+}
+
+.box .box-text h2 {
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.box .box-text h3 {
+    font-size: 0.7rem;
+    font-weight: 500;
+}
+
+.rating-download {
+    margin-top: 0.8rem;
+    display: flex;
+    justify-content: space-between;
+}
+.rating {
+    display: flex;
+    align-items: center;
+    column-gap: 4px;
+    background: rgba(29, 25, 25, 0.85);
+    padding: 2px 6px;
+    border-radius: 0.2rem;
+}
+
+.rating .bx {
+    color: #faa302;
+    font-size: 0.9rem;
+}
+
+.rating span {
+    color: #faa302;
+    font-size: 0.9rem;
+}
+
+.box-btn .bx-down-arrow-alt {
+    font-size: 24px;
+    color: var(--text-color);
+    background: rgba(29, 25, 25, 0.85);
+    padding: 4px;
+    border-radius: 0.2rem;
+}
+
+.box-btn .bx-down-arrow-alt:hover {
+    color: var(--dark-color);
+    background: var(--text-color);
+    transition: 0.2s all linear;
+}
