--- a/css/style.css
+++ b/css/style.css
@@ -410,3 +410,29 @@ line 1 and line 3 will rotate 45deg, where line 2 will disappear. */
     font-size: 0.9rem;
     color: var(--text-color);
 }
+
+.video-container video {
+    width: 100%;
+    aspect-ratio: 16/9;
+}
+
+.video-container {
+    margin-top: 5rem;
+}
+
+.about {
+    margin-top: 2rem;
+}
+
+.about h2 {
+    display: inline-flex;
+    font-size: 1.4rem;
+    font-weight: 500;
+    border-bottom: 4px solid var(--main-color);
+}
+
+.about p {
+    font-size: 0.938rem;
+    margin-top: 1rem;
+    text-align: justify;
+}
