--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,10 @@
 }
 
 :root {
-    --main-color: #fa5353;
+    --main-color: #dd5f38;
     --dark-color: #1b1826;
     --light-color: #322f40;
-    --text-color: hsl(0, 0%, 91%);
+    --text-color: hsl(0, 0%, 83%);
 }
 
 ::selection {
@@ -24,7 +24,10 @@
 }
 
 section {
-    padding: 4rem 0 3rem;
+    padding-top: 20px;
+    padding-right: 0px;
+    padding-bottom: 20px;
+    padding-left: 0px;
 }
 
 img {
@@ -48,8 +51,10 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    background: var(--dark-color);
+    background: #090711;
     z-index: 100;
+    border-color: #090711 #090711 var(--main-color) #090711;
+    border-style: hidden hidden double hidden;
 }
 
 /* Nav */
@@ -234,7 +239,7 @@ line 1 and line 3 will rotate 45deg, where line 2 will disappear. */
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    margin-top: 5rem;
+    margin-top: 8rem;
 }
 
 .home img {
@@ -258,6 +263,49 @@ line 1 and line 3 will rotate 45deg, where line 2 will disappear. */
     margin-bottom: 1rem;
 }
 
+.swiper-pagination-home {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 3rem;
+}
+.swiper-pagination-home .swiper-pagination-bullet{
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 20px;
+    font-size: 12px;
+    color: #fff;
+    opacity: 1;
+    background: var(--light-color);
+  }
+
+.swiper-pagination-home .swiper-pagination-bullet-active {
+    color: #fff;
+    background: var(--main-color);
+}
+
+.swiper-pagination-trending {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.swiper-pagination-trending .swiper-pagination-bullet{
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 20px;
+    font-size: 12px;
+    color: #fff;
+    opacity: 1;
+    background: var(--light-color);
+  }
+
+.swiper-pagination-trending .swiper-pagination-bullet-active {
+    color: #fff;
+    background: var(--main-color);
+}
+
 .btn {
     background: var(--main-color);
     padding: 15px 20px;
@@ -279,7 +327,7 @@ line 1 and line 3 will rotate 45deg, where line 2 will disappear. */
     display: flex;
     align-items: center;
     column-gap: 1rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 .heading .bx {
