--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,20 @@ header {
     z-index: 200;
     transform: 0.3s;
 }
+#percentage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 4px;
+    height: 44px;
+    width: 44px;
+    border-radius: 50%;
+    background: var(--light-color);
+    cursor: pointer;
+    z-index: 200;
+    transform: 0.3s;
+}
 
 /* Create an icon with 3 lines to represent "menu" */
 .menu-icon div {
